# file-sorter

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml  release.yml
src/file_sorter/: __init__.py  hash.py  utils.py
tests/: conftest.py  test_cli.py  test_hash.py  test_utils.py
