[project]
name = "file-sorter"
version = "0.1.0"
description = "Scripts that I use to sort my files"
readme = "README.md"
authors = [
    { name = "Paul Ragot", email = "ragot.paul12@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "rich>=13.9.4",
]

[project.scripts]
file-sorter = "file_sorter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
