[project]
name = "file-sorter"
version = "0.1.0"
description = "Scripts that I use to sort my files"
readme = "README.md"
authors = [
    { name = "Paul Ragot", email = "ragot.paul12@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "pytest-mock>=3.14.0",
    "rich>=14.0.0",
]

[project.scripts]
file-sorter = "file_sorter:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
